--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="height: 100%;">
+<html style="height: 100%;" lang="">
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="index.css">
@@ -9,12 +9,7 @@
     <div class="wrapper">
 <!-- Top navigation bar -->
         <div class="navbar">
-            <ul>
-                <li><a class="active">Home</a></li>
-                <li><a href="#main">Main</a></li>
-                <li><a href="./login_register/login.html">Login</a>
-                <li><a href="./login_register/register_html.php">Regiser</a>
-            </ul>
+
         </div>
 <!-- Grid conatiner -->
         <div class="grid-container">
