finished first div

--- a/info/info.html
+++ b/info/info.html
@@ -14,15 +14,41 @@
     </div>
     <!-- First panel -->
     <div class="panel first">
-
+    <div class="content" style="background-color: beige;">
+        <h1>Fake News</h1>
+        <p><mark>Un'informazione che in parte o totalmente non corrisponde 
+            al vero,</mark> intenzionalmente o intenzionalmente 
+            attraverso il web,media o tecnologie digitali di 
+            comunicazione vengono chiamate Fake news,sono caratterizzate
+             da un apparente plausibilità. quest’ultima alimentata da un 
+             sistema <mark>distorto di aspettative dell’opinione pubblica</mark> e da
+              <mark>un'amplificazione dei pregiudizi e bias </mark> ne sono alla base,
+              ciò che ne agevola la condivisione e la diffusione pur in assenza di una verifica delle fonti.
+        </p>
+        <p>
+            Le Fake news sono un concetto vicino a quello di <b>pseudo verità</b> costruita 
+            attraverso scelte individuali e collettive che fanno perno sull'emotività 
+            e le convinzioni condivise dall’opinione pubblica prescindendo del tutto o in parte dalla conformità con il reale e.
+        </p>
+    </div>
     </div>
     <!-- Second panel -->
     <div class="panel second">
-
+        <div class="grid-content">
+            <div class="one"><h1>Bias</h1>
+                <p>Un'inclinazione o pregiudizio verso una cosa,persona,concetto,ecc.</p></div>
+            <div class="two">Esistono vari tipi di bias che le fake news  spesso provano a invocare  come:</div>
+            <div class="three"><ul>
+                <li>Confirmation bias: l’individuo vuole che la notizia sia vera.</li>
+                <li>Anchoring bias: la surfermazione sulla prima parte di un informazione.</li>
+                <li>Authority bias: la tendenza di dare più credibilità a le opinioni di persone con posizioni di più autorità</li>
+            </ul></div>
+        </div>
+        <div class="grid-content" >Hi am here</div>
     </div>
     <!-- Third panel -->
     <div class="panel third">
-
+        <div class="content">Hi am here</div> 
     </div>
 
 </div>
