finished info(except animations)

--- a/info/info.html
+++ b/info/info.html
@@ -14,7 +14,7 @@
     </div>
     <!-- First panel -->
     <div class="panel first">
-    <div class="content" style="background-color: beige;">
+    <div class="content">
         <h1>Fake News</h1>
         <p><mark>Un'informazione che in parte o totalmente non corrisponde 
             al vero,</mark> intenzionalmente o intenzionalmente 
@@ -35,21 +35,82 @@
     <!-- Second panel -->
     <div class="panel second">
         <div class="grid-content">
+            <div id="paper"><img src="../resources/logo.jpg"></div>
             <div class="one"><h1>Bias</h1>
-                <p>Un'inclinazione o pregiudizio verso una cosa,persona,concetto,ecc.</p></div>
+                <p>Un'inclinazione o pregiudizio verso una cosa,persona,concetto,ecc.</p>
+            </div>
+
             <div class="two">Esistono vari tipi di bias che le fake news  spesso provano a invocare  come:</div>
-            <div class="three"><ul>
-                <li>Confirmation bias: l’individuo vuole che la notizia sia vera.</li>
-                <li>Anchoring bias: la surfermazione sulla prima parte di un informazione.</li>
-                <li>Authority bias: la tendenza di dare più credibilità a le opinioni di persone con posizioni di più autorità</li>
-            </ul></div>
+
+            <img src="../resources/authority.jpg"><!--Logo for authority bias-->
+            <!--Logo for confirmation bias-->
+            <img src="https://imageio.forbes.com/blogs-images/salesforce/files/2016/05/puzzlehead.jpg?height=699&width=711&fit=bounds">
+            <img src="../resources/anchor.png"><!--Logo for anchoring bias-->
+            <div><b>- Confirmation bias:</b> l’individuo vuole che la notizia sia vera.</div>
+            <div><b>- Anchoring bias:</b> la surfermazione sulla prima parte di un informazione.</div>
+            <div><b>- Authority bias:</b> la tendenza di dare più credibilità a le opinioni di persone con posizioni di più autorità</div>
         </div>
-        <div class="grid-content" >Hi am here</div>
+        <div class="content social" style="justify-content: flex-start;">
+            <div><!--Title-->
+                <img src="../resources/anchor.png" style="border-radius: 2rem;
+                box-shadow: -7px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+                <h1>Social Media</h1>
+            </div>
+            <div><!--List-->
+                <p>I social hanno un ruolo critico nella diffusione della fake news perché:</p>
+                    <ul>
+                        <li>
+                            Ci facilitano la condivisione di video,foto e informazioni con un ampio gruppo di persone.
+                        </li><br>
+                        <li>
+                            Questi algoritmi vanno a dare più valore a post più polarizzanti.Il risultato di ciò è la prevalenza di fake news sui social.
+                        </li>
+                    </ul>
+
+            </div>
+            <div>
+<!--                imagine di social media-->
+            </div>
+        </div>
     </div>
     <!-- Third panel -->
     <div class="panel third">
-        <div class="content">Hi am here</div> 
+        <div class="content social" style="justify-content: flex-start;">
+            <div><!--Title-->
+                <img src="../resources/search.png" style="border-radius: 2rem;background-color: azure;
+                box-shadow: -7px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+                <h1>Search Engines</h1>
+            </div>
+            <div style="height: 70%"><!--List-->
+                <p>I motori di ricerca vengono comunemente usati per trovare informazioni:</p>
+                <ul>
+                    <li>
+                        Avvolte i loro algoritmi potrebbero declassare la credibilità e l'accuratezza nella classifica dei risultati di ricerca e a causa  dare più prominenza do queste informazioni fake sull sito.
+                    </li><br>
+                    <li>
+                        In addizione gli SEO(search engine optimization)  tactics possono essere manipolati spinti dalla ricerca di guadagni economici,facilitando la visibilità e condivisione di fake news.
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="content">
+            <h1>Identificare fake news</h1>
+            <p>Per identificare se della notizia è effettivamente fake news ci sono varie strategie per valutare la credibilità della notizia:<p>
+            <ul>
+            <li>Innanzitutto c'è il bisogno di essere scettico.</li>
+            <li>Verificare la source:dare attenzione alla reputazione del sito</li>
+            <li>Verifica più risorse</li>
+            <li>Cerca prove che supportano e negano la news</li>
+            <li>Consultare siti di fact-checking</li>
+        </ul>
+        </div>
+
     </div>
+
+
+
+    </div> <!--Wrapper close-->
 
 </div>
 </body>
