--- a/main/main.html
+++ b/main/main.html
@@ -9,7 +9,7 @@
     <div class="wrapper">
 <!-- Top navigation bar -->
         <div class="navbar">
-            <img src="resources/profile.png">
+            <img src = "../resources/profile.png">
             <div id="title">Ahipue Daniel</div>
         </div>
 <!-- Grid conatiner -->
@@ -21,31 +21,33 @@
                     <!-- Full-width images with number and caption text -->
                     <div class="mySlides fade">
                         <div class="numbertext">1 / 5</div>
-                        <div class="image" style="background-image: url('resources/pcto.jpg');"></div>
+                        <div class="image" style="background-image: url('../resources/pcto.jpg');"></div>
                         <div class="text"><mark>PCTO</mark></div>
                     </div>
 
                     <div class="mySlides fade">
                         <div class="numbertext">2 / 5</div>
-                        <div class="image" style="background-image: url('resources/info.jpg');"></div>
-                        <div class="text"><mark>Informatica</mark></div>
+                        <div class="image" style="background-image: url('../resources/info.jpg');"></div>
+                        <div class="text"><a href="info/info.html">
+                            <mark>Informatica</mark>
+                        </a></div>
                     </div>
 
                     <div class="mySlides fade">
                         <div class="numbertext">3 / 5</div>
-                        <div class="image" style="background-image: url('resources/sis.jpg');"></div>
+                        <div class="image" style="background-image: url('../resources/sis.jpg');"></div>
                         <div class="text"><mark>Sistemi&Reti</mark></div>
                     </div>
 
                     <div class="mySlides fade">
                         <div class="numbertext">4 / 5</div>
-                        <div class="image" style="background-image: url('resources/tpsit.jpg');"></div>
+                        <div class="image" style="background-image: url('../resources/tpsit.jpg');"></div>
                         <div class="text"><mark>T.P.S.I.T</mark></div>
                     </div>
 
                     <div class="mySlides fade">
                         <div class="numbertext">5 / 5</div>
-                        <div class="image" style="background-image: url('resources/gpoi.jpg');"></div>
+                        <div class="image" style="background-image: url('../resources/gpoi.jpg');"></div>
                         <div class="text"><mark>G.P.O.I</mark></div>
                     </div>
 
