--- a/info/info.html
+++ b/info/info.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="info.css">
-    <title>test</title>
+    <title>Informatica</title>
 </head>
 <body>
 <div class="wrapper">
