--- a/login_register/login.html
+++ b/login_register/login.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-    <title>login page</title>
+    <title>Login page</title>
     <!-- File css-->
     <link href="admin.css" rel="stylesheet" type="text/css" />
 
