--- a/info/info.html
+++ b/info/info.html
@@ -11,6 +11,7 @@
     <div class="navbar">
         <img src="../resources/profile.png">
         <div id="title">Ahipue Daniel</div>
+        <a href="../main/main.html" style="height: 50%;display: flex;align-items: center;"><img src="../resources/back.png"></a>
     </div>
     <!-- First panel -->
     <div class="panel first">
