--- a/main/main.html
+++ b/main/main.html
@@ -11,6 +11,7 @@
         <div class="navbar">
             <img src = "../resources/profile.png">
             <div id="title">Ahipue Daniel</div>
+            <a href="../index.html" style="height: 50%;display: flex;align-items: center;"><img src="../resources/back.png"></a>
         </div>
 <!-- Grid conatiner -->
         <div class="grid-container">
@@ -28,7 +29,7 @@
                     <div class="mySlides fade">
                         <div class="numbertext">2 / 5</div>
                         <div class="image" style="background-image: url('../resources/info.jpg');"></div>
-                        <div class="text"><a href="info/info.html">
+                        <div class="text"><a href="../info/info.html">
                             <mark>Informatica</mark>
                         </a></div>
                     </div>
